fix: optimizar ejecucion de update.bat y liberar v1.0.6